After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789551 - Unplugging headset with audio panel open mutes internal mic
Unplugging headset with audio panel open mutes internal mic
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Sound
git master
Other Linux
: Normal minor
: ---
Assigned To: Control center sound maintainer(s)
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-10-27 10:33 UTC by Andrea Azzarone
Modified: 2017-10-30 15:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
sound: Use row-activated instead of selection-changed. (5.44 KB, patch)
2017-10-27 12:14 UTC, Andrea Azzarone
reviewed Details | Review
sound: Discard selection-changed events that are not triggered by the user (1.77 KB, patch)
2017-10-27 17:04 UTC, Andrea Azzarone
committed Details | Review

Description Andrea Azzarone 2017-10-27 10:33:21 UTC
The bug was originally reported downstream here [1] against unity-control-center. The problem is not easy to reproduce with gnome-control-center, however I was able to reproduce it on Ubuntu Artful 17.10 (Gnome Session, running gnome-control-center) once after serveral tries.

Reproduce steps:
1. Open System Settings -> Sound -> select the input tab
2. Plug headset and select Headset on Unknown Audio Device dialog.
3. Check external mic is working
4. Adjust the internal microphone volume. (Just change the volume value.)
5. Adjust headset input volume around 100% in Input tab from Sound settings
6. Unplug headset
7. Check internet mic status

In a nuthshell the problem is that g-c-c decides which port the system should use after the user unplugs the headset. In my opinion this should be PA's job. g-c-c should react to changes notified by PA and "update PA status" just if there is an user interaction with the GUI. Technically the problem is caused by the fact that removing the selected row from a treeview generates a selection-changed signal. Using row-activated event prenvents this.



[1] https://bugs.launchpad.net/ubuntu/+source/unity-control-center/+bug/1716359
Comment 1 Andrea Azzarone 2017-10-27 12:14:02 UTC
Created attachment 362403 [details] [review]
sound: Use row-activated instead of selection-changed.

Right now the tree view in the input and the output tab uses the "selection-changed"
signal. This implies that when a row is removed (e.g. when unplugging heaphones) g-c-c
will receive the signal and try to change the active port. G-c-c should not be the one
deciding deciding which port should be active, the user or PA are smart enough.
Comment 2 Rui Matos 2017-10-27 16:05:13 UTC
Review of attachment 362403 [details] [review]:

IIUC, the problem is that when a mixer device is removed we remove it from the model and if it was active/selected, the tree view immediately selects a new one thus causing us to tell the mixer to activate this tree view implicitly selected device, right?

In that case, it seems we could fix this by just change the selection mode to GTK_SELECTION_SINGLE instead of BROWSE. With this change the tree view wouldn't select anything implicitly and we would get the active_input/output_update() callback from the mixer where we would then select the PA determined device.

My concern with switching to the row-activated signal is that we currently conflate selection with active which means that using key navigation users can switch the device by simply moving the selection. So, unless we change the UI to convey activeness differently I'd prefer the solution I proposed above.
Comment 3 Andrea Azzarone 2017-10-27 16:15:15 UTC
Thanks for the review, I'll try the suggested fix and I'll let you know asap.
Comment 4 Rui Matos 2017-10-27 16:19:41 UTC
Thinking a bit more about it, GTK_SELECTION_SINGLE means the UI might end up looking "broken" since it allows for deselection.

Perhaps an alternative would be to check if there's an input event in the selection changed handlers and bail out if there isn't one. Using gtk_get_current_event_device() would be best for this as it avoid the event copy.
Comment 5 Andrea Azzarone 2017-10-27 16:41:14 UTC
gtk_get_current_event_device seems to work fine (_SINGLE didn't work, the event was still triggered).
Comment 6 Andrea Azzarone 2017-10-27 17:04:07 UTC
Created attachment 362425 [details] [review]
sound: Discard selection-changed events that are not triggered by the user

The tree view in the input and the output tab uses the "selection-changed"
signal. This implies that when a row is removed (e.g. when unplugging heaphones) g-c-c
will receive the signal and try to change the active port. G-c-c should not be the one
deciding deciding which port should be active, the user or PA are smart enough. We
should descard selection-changed events that are not triggered by an user interaction.
Comment 7 Rui Matos 2017-10-30 15:46:01 UTC
Review of attachment 362425 [details] [review]:

looks good, thanks
Comment 8 Rui Matos 2017-10-30 15:50:06 UTC
Attachment 362425 [details] pushed as dc46487 - sound: Discard selection-changed events that are not triggered by the user