panels/sound/gvc-mixer-dialog.c
@@ -1410,6 +1410,9 @@ on_input_selection_changed (GtkTreeSelection *selection,
         guint             id;
         GvcMixerUIDevice *input;
 
+        if (gtk_get_current_event_device () == NULL)
+                return;
+
         if (gtk_tree_selection_get_selected (selection, &model, &iter) == FALSE) {
                 g_debug ("Could not get default input from selection");
                 return;
@@ -1439,6 +1442,9 @@ on_output_selection_changed (GtkTreeSelection *selection,
         gboolean          active;
         guint             id;
         GvcMixerUIDevice *output;
+
+        if (gtk_get_current_event_device () == NULL)
+                return;
 
         if (gtk_tree_selection_get_selected (selection, &model, &iter) == FALSE) {
                 g_debug ("Could not get default output from selection");
